feat: create mining type crud

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,6 +5,7 @@
         <h1 class="container-title">Add your <span class="yellow">crypto coins</span> in a wallet</h1>
         <p class="description">Ready to enter the world of crypto banking? CryptoWallet is your gateway to brand new digital currency services to make life easier. 
         You can use CryptoWallet to buy, sell, and trade crypto.</p>
-        <%= link_to "Get started", coins_path, { :class => "nav-button"} %>
+        <%= link_to "Mining Types", mining_types_path, { :class => "nav-button"} %>
+        <%= link_to "Coins", coins_path, { :class => "nav-button"} %>
     </div>
 </div>
