style: change nav button style

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -54,7 +54,13 @@
     border: none;
     border-radius: .4rem;
     font-size: 1.2rem;
+    text-decoration: none;
+    color: black;
     transition: color .2s;
+}
+
+.nav-button:visited{
+    color: black;
 }
 
 .nav-button:hover{
