--- a/app/views/coins/_form.html.erb
+++ b/app/views/coins/_form.html.erb
@@ -24,6 +24,12 @@
   <div class="field">
     <%= form.label :url_image %>
     <%= form.text_field :url_image %>
+    <%#= image_tag coin.url_image, width: 25, height: 25 %>
+  </div>
+
+  <div class="field">
+    <%= form.label :mining_type_id %>
+    <%= form.select("mining_type_id", @mining_type_options, {include_blank: "Selecione..."})%>
   </div>
 
   <div class="actions">
