--- a/app/views/coins/index.html.erb
+++ b/app/views/coins/index.html.erb
@@ -5,9 +5,9 @@
 <table>
   <thead>
     <tr>
-      <th>Description</th>
-      <th>Acronym</th>
-      <th>Url image</th>
+      <th><%= Coin.human_attribute_name(:description) %></th>
+      <th><%= Coin.human_attribute_name(:acronym) %></th>
+      <th><%= Coin.human_attribute_name(:url_image) %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,10 +17,10 @@
       <tr>
         <td><%= coin.description %></td>
         <td><%= coin.acronym %></td>
-        <td><%= coin.url_image %></td>
-        <td><%= link_to 'Show', coin %></td>
-        <td><%= link_to 'Edit', edit_coin_path(coin) %></td>
-        <td><%= link_to 'Destroy', coin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= image_tag coin.url_image, width: 25, height: 25 %></td>
+        <td><%= link_to t('links.show'), coin %></td>
+        <td><%= link_to t('links.edit'), edit_coin_path(coin) %></td>
+        <td><%= link_to t('links.delete'), coin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
