--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,23 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    params[:controller], media: 'all', 'data-turbolinks-track': 'reload' %>
+    
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag params[:controller], 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container-fluid">
+      <ul class="nav justify-content-end">
+          <li class="nav-item">
+              <%= link_to 'Português', root_path(locale: 'pt-BR'), class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+              <%= link_to 'English', root_path(locale: 'en'), class: "nav-link" %>
+          </li>
+      </ul>
+      <%= yield %>
+    </div>
   </body>
 </html>
