--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,10 +2,9 @@
 <div class="welcome-container">
     <img class="coin-illustration" src="/assets/Bitcoin-amico.svg">
     <div class="container-wrapper">
-        <h1 class="container-title">Add your <span class="yellow">crypto coins</span> in a wallet</h1>
-        <p class="description">Ready to enter the world of crypto banking? CryptoWallet is your gateway to brand new digital currency services to make life easier. 
-        You can use CryptoWallet to buy, sell, and trade crypto.</p>
-        <%= link_to "Mining Types", mining_types_path, { :class => "nav-button"} %>
-        <%= link_to "Coins", coins_path, { :class => "nav-button"} %>
+        <h1 class="container-title"><%= t('welcome_title')%></h1>
+        <p class="description"><%= t('welcome_description')%></p>
+        <%= link_to "#{MiningType.model_name.human}", mining_types_path, { :class => "btn btn-primary btn-lg"} %>
+        <%= link_to "#{Coin.model_name.human}", coins_path, { :class => "btn btn-primary btn-lg"} %>
     </div>
 </div>
