feat: create more traduction to the views

--- a/app/views/coins/index.html.erb
+++ b/app/views/coins/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Coins</h1>
+<h1><%= Coin.model_name.human(count: @coins.count)%></h1>
 
 <table class="table table-hover">
   <thead>
@@ -20,7 +20,7 @@
         <td><%= image_tag coin.url_image, width: 25, height: 25 %></td>
         <td><%= link_to t('links.show'), coin %></td>
         <td><%= link_to t('links.edit'), edit_coin_path(coin) %></td>
-        <td><%= link_to t('links.delete'), coin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to t('links.delete'), coin, method: :delete, data: { confirm: t('msg_confirm') } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Coin', new_coin_path %>
+<%= link_to t('new.coin'), new_coin_path, class: "btn btn-primary" %>
