--- a/app/views/mining_types/edit.html.erb
+++ b/app/views/mining_types/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Mining Type</h1>
+<h1><%= t('editing.mining_type')%></h1>
 
 <%= render 'form', mining_type: @mining_type %>
 
-<%= link_to 'Show', @mining_type %> |
-<%= link_to 'Back', mining_types_path %>
+<%= link_to t('links.show'), @coin %> |
+<%= link_to t('links.back'), coins_path %>
